--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,9 @@ jobs:
     needs: [ build ]
     name: test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [15]
     steps:
     - uses: actions/checkout@v2
     - uses: pnpm/action-setup@v2.0.1
